testing/tests/ui/macro.stderr
error: the previous template error derives from
 --> tests/ui/macro.rs:4:12
  |
4 | #[template(source = "{%- macro thrice(param) -%}
  |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/macro.rs:12:12
   |
12 | #[template(source = "{%- macro thrice(param, param2) -%}
   |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/macro.rs:20:12
   |
20 | #[template(source = "{%- macro thrice() -%}
   |            ^^^^^^
